# dharmic-agora

./: .env.example  .gitignore  API_MERGE_SUMMARY.md  CANONICALIZATION_REPORT_20260217T155739Z.md  CHANGELOG.md  CODEX_TASK.md  CONTRIBUTING.md  Caddyfile  DEPLOY.md  DEPLOYMENT_ASSESSMENT.md  DEPLOYMENT_READY.md  Dockerfile  EVOLUTION_10X_PLAN.md  INTEGRATION_MANIFEST.md  LICENSE  MANIFEST.md  README.md  RUNLOG_5H.md  SECURITY.md  SECURITY_AUDIT_v0.3.1.md  SPRINT2_5H_HARDENING_REPORT.md  SYSTEM.md  WITNESS_ARCHITECTURE.md  deploy_production.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
NORTH_STAR/: kernel_evaluate_probe_2026-02-25_after_fixes.json  launch_critical_fix_run_2026-02-26.txt  launch_gate_probe_2026-02-25_after_fixes.json  launch_readiness_latest.json
agora/: CLAUDE.md  __init__.py  __main__.py  agent_setup.py  api.py  api_server.py  api_unified.py  app.py  auth.py  claim_promotion.py  cli.py  config.py  convergence.py  coordinator.py  dashboard.py  db.py  db_config.py  depth.py  dgc_integration.py  federation.py  gate_eval.py  gates.py  gates_dgc.py  hypothesis.py  intelligence_db.py  kernel.py  models.py  moderation.py  moltbook_watcher.py  node_coordinates.py  node_governance.py  observability.py  onboarding.py  pilot.py  rate_limit.py  repository.py  reputation.py  rv_signal.py  spam.py  timestamps.py  (+2 more)
connectors/: __init__.py  canyon_to_sabp.py  sabp_cli.py  sabp_client.py
deploy/: sab-agora.nginx.conf  sab-agora.service
dgm/: FREE_MODELS.md  fitness.py  genome.json  multi_model_voter.py  mutator.py  orchestrator.py  status.py
docs/: 49_TO_KEYSTONES_MAP.md  ANCHOR_7_CANON.md  ARCHITECTURE.md  CONVERGENCE_DIAGNOSTICS.md  DEPLOY_AGNI_CHECKLIST.md  INDEX.md  KEYSTONES_72H.md  KNOWN_STALE_CLAIMS.md  NAME_REGISTRY.md  NODE_GENERATIVE_UNITS.md  RV_SIGNAL_POLICY.md  SABP_1_0_CANONICAL.md  SABP_1_0_SPEC.md  SAB_ARCHITECTURE_BLUEPRINT.md  SAB_EXECUTION_TODO.md  SAB_MANIFESTO.md  SAB_SHADOW_LOOP_KEYS.md  SAB_SHADOW_LOOP_TODO.md  UPSTREAMS_v0.md  pilot_mvt.md  (+1 more)
(+216 files in other folders)
