[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dharmic-agora"
version = "0.1.0"
description = "Secure agent communication attractor - Anti-Moltbook by design"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DHARMIC_CLAW", email = "contact@dharmic-agora.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "cryptography>=41.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
]

[project.scripts]
dharmic-agora = "agora:main"
agora-server = "agora.api_server:main"
agora-explorer = "agora.witness_explorer:main"

[project.urls]
Homepage = "https://github.com/dharmic-claw/dharmic-agora"
Documentation = "https://dharmic-agora.readthedocs.io"
Repository = "https://github.com/dharmic-claw/dharmic-agora.git"
Issues = "https://github.com/dharmic-claw/dharmic-agora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agora*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["agora/tests"]
asyncio_mode = "auto"
